# Distributed-Information-Systems

VIS/: CMakeLists.txt  settings.gradle.kts
VIS/cpp/HelloWorld/: build.gradle.kts
VIS/cpp/HelloWorld/src/main/cpp/: Foo.cpp  main.cpp
VIS/cpp/HelloWorld/src/main/headers/: Foo.h
VIS/general/EnvironmentI/: build.gradle.kts
VIS/general/EnvironmentI/src/main/java/at.fhooe.sail.vis.environment_i/: EnvData.java  IEnvService.java
VIS/java/HelloWorld/: build.gradle.kts
VIS/java/HelloWorld/src/main/java/at/fhooe/sail/vis/test/: HelloWorld.java
VIS/jaxb/: build.gradle.kts
VIS/jaxb/BruteForce/: build.gradle.kts
VIS/jaxb/JSON/: build.gradle.kts
VIS/jaxb/XML/: build.gradle.kts
VIS/jaxb/parser/JSON/: build.gradle.kts
VIS/jaxb/parser/XML/: build.gradle.kts
VIS/jaxb/src/main/java/at/fhooe/sail/vis/: Main.java
VIS/rest/: build.gradle.kts
VIS/rest/Environment_RestClient/: build.gradle.kts
VIS/rest/Environment_RestServer/: build.gradle.kts
VIS/rest/Hello_RestServer/: build.gradle.kts
VIS/rest/Hello_RestServer/webapp/: index.html
VIS/rest/src/main/java/at/fhooe/sail/vis/rest/: Main.java
VIS/rmi/Environment_RmiClient/: build.gradle.kts
VIS/rmi/Environment_RmiClient/src/main/java/at/fhooe/sail/vis/environmentrmiclient/: Environment_RmiClient.java
VIS/rmi/Environment_RmiServer/: build.gradle.kts
VIS/rmi/Hello_RmiClient/: build.gradle.kts
VIS/rmi/Hello_RmiClient/src/main/java/at/fhooe/sail/vis/hellormiclient/: Hello_RmiClient.java
VIS/rmi/Hello_RmiInterface/: build.gradle.kts
VIS/rmi/Hello_RmiServer/: build.gradle.kts
VIS/servlet/EnvironmentService_Servlet/: build.gradle.kts
VIS/servlet/Hello_Servlet/: build.gradle.kts
VIS/servlet/Info_Servlet/: build.gradle.kts
VIS/servlet/Session_Servlet/: build.gradle.kts
VIS/socket/cpp/Echo_SocketServer/: build.gradle.kts
VIS/socket/cpp/Echo_SocketServer/src/main/cpp/: Echo_SocketServer.cpp  main.cpp
VIS/socket/cpp/Echo_SocketServer/src/main/headers/: Echo_SocketServer.h
VIS/socket/cpp/Environment_SocketServer/: build.gradle.kts
VIS/socket/cpp/Environment_SocketServer/src/main/cpp/: Environment_SocketServer.cpp  main.cpp
VIS/socket/cpp/Environment_SocketServer/src/main/headers/: Environment_SocketServer.h
VIS/socket/cpp/Hello/: build.gradle.kts
VIS/socket/cpp/Hello/src/main/cpp/: main.cpp
VIS/socket/cpp/Http_SocketServer/: build.gradle.kts
VIS/socket/cpp/Http_SocketServer/src/main/cpp/: Http_SocketServer.cpp  main.cpp
VIS/socket/cpp/Http_SocketServer/src/main/headers/: Http_SocketServer.h
VIS/socket/cpp/Ipv6_SocketClient/: build.gradle.kts
VIS/socket/cpp/Ipv6_SocketClient/src/main/cpp/: Ipv6_SocketClient.cpp  main.cpp
VIS/socket/cpp/Ipv6_SocketClient/src/main/headers/: Ipv6_SocketClient.h
VIS/socket/cpp/Ipv6_SocketServer/: build.gradle.kts
VIS/socket/cpp/Ipv6_SocketServer/src/main/cpp/: Ipv6_SocketServer.cpp  main.cpp
VIS/socket/cpp/Ipv6_SocketServer/src/main/headers/: Ipv6_SocketServer.h
VIS/socket/cpp/Primitive_SocketClient/: build.gradle.kts
VIS/socket/cpp/Primitive_SocketClient/src/main/cpp/: Primitive_SocketClient.cpp
VIS/socket/cpp/Primitive_SocketServer/: build.gradle.kts
VIS/socket/cpp/Primitive_SocketServer/src/main/cpp/: Primitive_SocketServer.cpp
VIS/socket/cpp/SocketClientTest/: build.gradle.kts
VIS/socket/cpp/SocketClientTest/src/main/cpp/: SocketClientTest.cpp
VIS/socket/cpp/UDP_SocketClient/: build.gradle.kts
VIS/socket/cpp/UDP_SocketClient/src/main/cpp/: UDP_SocketClient.cpp  main.cpp
VIS/socket/cpp/UDP_SocketClient/src/main/headers/: UDP_SocketClient.h
VIS/socket/cpp/UDP_SocketServer/: build.gradle.kts
VIS/socket/cpp/UDP_SocketServer/src/main/cpp/: UDP_SocketServer.cpp  main.cpp
VIS/socket/cpp/UDP_SocketServer/src/main/headers/: UDP_SocketServer.h
VIS/socket/java/Echo_SocketClient/: build.gradle.kts
VIS/socket/java/Echo_SocketServer/: build.gradle.kts
VIS/socket/java/Environment_SocketClient/: build.gradle.kts
VIS/socket/java/Environment_SocketClient/src/main/java/at.fhooe.sail.vis.environmentsocketclient/: Environment_SocketClient.java
(+38 files in other folders)
